chore: updating doc